[package]
name = "test-utilities"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.13.0"
fake = "2.5.0"
futures = "0.3.24"
log = "0.4.17"
mongodb = { version = "2.3.1", features = ["tokio-sync"], optional = true }
mongodb-gridfs = { version = "0.2.2", optional = true }
rand = "0.8.5"
tempfile = { version = "3.3.0", optional = true }
tokio = { version = "1.21.2", features = ["full"] }

[dev-dependencies]
bollard = "0.13.0"

[features]
default = ["docker", "fs", "gridfs", "mongodb"]
docker = []
fs = ["tempfile"]
gridfs = ["mongodb", "mongodb-gridfs"]
